css/style.css
body {
  margin: 0;
  -webkit-font-smoothing: antialiased !important;
}

html {
  scroll-behavior: smooth; /*creates scrolling reaction rahter than jump*/ 
  overflow: scroll; /*content wont be clipped*/
}

a {
  text-decoration: none;
}

.downIndicator {
  width: 35px;
  height: 21px;
  left: 0;
  right: 0;
  margin: 0 auto;
  bottom: 20px;
  text-align: center;
  position: absolute;
}


/*hyperlink*/

p a {
  color: #F66263;
}

p a:hover {
  color: #333333;
}

td a {
  color: #F66263;
}

td a:hover {
  color: #333333;
}

img {
  pointer-events: none; /*prevents images from being copied*/
}


/*particles js*/

#particle {
  width: 100%; 
  height: 100%;
  top: 0; 
  left: 0; 
  position: absolute; 
  background-color: #F66263;
}

#overlay {
  width: 100%; 
  height: 100%;
  top: 0; 
  left: 0; 
  position: absolute; 
}

.avoidParticles {
  position: relative;
  top: 100vh;
}

/*intro of home*/

div.home {
  min-height: 100vh;
  min-width: 100vw;
  text-align: center;
}

.homeGrid {
  display: inline-grid;
  grid-template-rows: auto;
  grid-template-columns: 500px 470px;
  grid-gap: 150px;
}

.homeText {
  max-width: 500px;
  margin-top: 110px;
  color: #FFFFFF;
  font-family: "circular_bold";
  text-align: left;
}

p.helloText {
  margin-bottom: 5px;
  line-height: 82px;
  font-size: 65px;

}
p.bioText{
  line-height: 44px;
  font-size: 35px;
}

img.meIllustration {
  margin-top: 155px;
}

#scrollTo {
  cursor: pointer;
}


/*cards of home*/

.cards {
  text-align: center;
}

.cardGrid {
  display: inline-grid;
  align-items: center;
  grid-template-rows: auto;
  grid-template-columns: 250px 250px 250px 250px;
  grid-gap: 60px 40px;
  margin-top: 60px;
}

.card {
  width: 250px;
  height: 350px;
  border-radius: 8px;
  background-color: #FFFFFF;
  text-align: left;
  box-shadow: 0 15px 20px 0 rgba(0,0,0,0.10);
  transition: all .3s;
}

p.cardName {
  margin-top: 28px;
  margin-left: 28px;
  color: #333333;
  font-family: "circular_medium";
  font-size: 19px;
}

p.cardType {
  margin-top: 5px;
  margin-left: 28px;
  color: #9CA5B0;
  font-family: "circular_book";
  font-size: 15px;
}

.cardHover {
  top: 0;
  position: relative;
  transition: all ease-in-out 0.25s;
}

.cardHover:hover {
  top: -20px;
  transition: all ease-in-out 0.25s;
}

/*for shadow*/
.card:hover {
  box-shadow: 0 30px 40px 0 rgba(0,0,0,0.15);
  transition: all .3s;
}

/*about*/

.about {
  text-align: center;
}

.mePhotograph {
  margin-top: 55px;
  grid-row-start: 1;
  grid-row-end: 4;
}

.aboutGrid {
  margin-top: 85px;
  display: inline-grid;
  grid-template-rows: auto;
  grid-template-columns: 740px 300px;
  grid-column-gap: 80px;
  grid-row-gap: 0px;
}

.aboutText {
  max-width: 740px;
  margin-top: 20px;
  color: #333333;
  font-family: "circular_bold";
  font-size: 30px;
  text-align: left;
  line-height: 38px;
}

.aboutText2 {
  grid-column-start: 1;
  grid-column-end: 1;
  grid-row-start: 2;
  grid-row-end: 2;
}

.aboutText3 {
  margin-bottom: 70px;
  grid-column-start: 1;
  grid-column-end: 1;
  grid-row-start: 3;
  grid-row-end: 3;
}

.careerExperience {
  max-width: 710px;
  margin: 0 auto;
  margin-top: 30px;
}

.careerExperience hr {
  margin-top: 30px;
  bottom: 0px;
}

.topLabels {
  display: flex;
  justify-content: space-between;
}

.leftTopLabel{
  color: #333333;
  font-family: "circular_book";
  font-size: 16px;
  display: inline-block;
}

.rightTopLabel {
  color: #333333;
  font-family: "circular_book";
  font-size: 16px;
  display: inline-block;
}

.lowerLabel {
  margin-top: 10px;
  margin-bottom: 0px;
  color: #9CA5B0;
  font-family: "circular_book";
  font-size: 14px;
}

/*content landing*/

#workIntro {
  min-height: 100vh;
  min-width: 100vw;
  text-align: center;
}

.workGrid {
  margin-top: 139px;
  display: inline-grid;
  grid-template-rows: auto;
  grid-template-columns: 510px 450px;
  grid-column-gap: 160px;
  grid-row-gap: 0px;
}

.lyricalBackground {
  background: #FF5E62; /* fallback for old browsers */
  background-image: linear-gradient(-180deg, #FF9966 0%, #FF5E62 100%);
}

.tableauBackground {
  background: #2193B0;  /* fallback for old browsers */
  background-image: linear-gradient(-180deg, #6DD5ED 0%, #2193B0 100%);

}

.chanceBackground {
  background: #2F80ED; /* fallback for old browsers */
  background-image: linear-gradient(-180deg, #56CCF2 0%, #2F80ED 100%);
}

.lilypadBackground {
  background: #4E54C8; /* fallback for old browsers */
  background-image: linear-gradient(-180deg, #8F94FB 0%, #4E54C8 100%);
}

.rookieRoadBackground {
  background: #13C46C; /* fallback for old browsers */
  background-image: linear-gradient(-180deg, #91E262 0%, #13C46C 100%);
}

.larkyBackground {
  background: #FB8D42; /* fallback for old browsers */
  background-image: linear-gradient(-180deg, #FCB930 0%, #FB8D42 100%);
}

h1 {
  max-width: 510px;
  margin-top: 15px;
  margin-left: -5px;
  font-family: "circular_bold";
  color: #FFFFFF;
  font-size: 80px;
  text-align: left;
  line-height: normal;
}

.hasYInName {
  margin-bottom: 4px;
}

.noYInName {
  margin-bottom: -6px;
}

.typeOfWork {
  max-width: 510px;
  font-family: "circular_bold";
  color: #FFFFFF;
  font-size: 19px;
  text-align: left;
  line-height: normal;
  grid-column-start: 1;
  grid-column-end: 1;
  grid-row-start: 2;
  grid-row-end: 2;
}

.date {
  max-width: 510px;
  margin-top: 2px;
  font-family: "circular_book";
  color: #FFFFFF;
  font-size: 14px;
  text-align: left;
  line-height: normal;
  grid-column-start: 1;
  grid-column-end: 1;
  grid-row-start: 3;
  grid-row-end: 3;
}

.descriptionOfWork {
  max-width: 510px;
  margin-top: 16px;
  font-family: "circular_book";
  color: #FFFFFF;
  font-size: 16px;
  text-align: left;
  line-height: 25px;
  grid-column-start: 1;
  grid-column-end: 1;
  grid-row-start: 4;
  grid-row-end: 4;
}

.workGrid img {
  grid-row-start: 1;
  grid-row-end: 6;
}

/*content*/

.workContent {
  padding-top: 60px;
  margin-right: auto;
  margin-left: auto;
  max-width: 700px;
}
/* ... */

